--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://ferutizi.github.io/calculadora-Interes-compuesto-react",
   "name": "calculadora-interes-compuesto",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
